# deepmarket

./: .env.example  .gitignore  MEMORY.md  README.md  TODO.md  distill_report_notime.txt  monitor_0x1d.py  monitor_0x1d_ui.html  pyproject.toml  requirements.txt  test_rtds_stability.py
config/: indicators.yaml  risk_rules.yaml  settings.yaml
config/strategies/: bn_rtds_spread.yaml  (+6 more)
docs/: 0x1d_strategy_characteristics.md  PRD.md  pm_account_0x1d_analysis.md  pm_account_0x1d_raw_trades.json
scripts/: analyze_btc_offset_premium.py  analyze_entry_timing.py  analyze_entry_timing_v2.py  analyze_lead_lag.py  analyze_market_making.py  analyze_order_type.py  analyze_pm_account.py  analyze_pm_deep.py  analyze_pm_final.py  analyze_price_range.py  analyze_profit_final.py  analyze_profit_mechanism.py  analyze_signal_reverse.py  analyze_trade_logs.py  diag_trade_capture.py  distill_0x1d.py  distill_signal.py  find_winners.py  model_zoo.py  redeem_ctf.py  verify_allocation.py
src/: main.py
tests/: _test_token.json  check_proxy.py  check_proxy2.py  check_ptb_rules.py  check_result.txt  check_rtds_timing.py  check_syntax.py  diag_ws.py  e2e_out.txt  e2e_output.txt  explore_5min.py  explore_5min2.py  explore_5min3.py  explore_5min4.py  explore_5min5.py  explore_5min_verify.py  explore_pm_api.py  explore_pm_api2.py  explore_pm_api3.py  explore_pm_api4.py  explore_pm_api5.py  explore_pm_api6.py  explore_ptb.py  explore_ptb2.py  explore_trader.py  explore_trader2.py  explore_trader3.py  pm_api_result.txt  test_5min_e2e.py  test_5min_mini.py  test_5min_quick.py  test_api_key.py  test_btc_event.py  test_btc_market.py  test_btc_neg_risk.py  test_btc_order.py  test_clob_book.py  test_clob_sign.py  test_deep_sig.py  test_e2e_order.py  (+19 more)
(+53 files in other folders)
