[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "polymarket-btc-predictor"
version = "0.1.0"
description = "Polymarket BTC 5min market prediction and betting system"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    # --- Async & Networking ---
    "aiohttp>=3.9",
    "websockets>=12.0",
    "httpx>=0.27",

    # --- Data Processing ---
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",       # Parquet read/write
    "duckdb>=0.10",        # Parquet query engine

    # --- Lightweight Storage ---
    "diskcache>=5.6",      # Disk-based cache (Redis alternative)

    # --- Technical Indicators ---
    "ta>=0.11",            # Technical analysis library
    "pandas-ta>=0.3",

    # --- Polymarket ---
    "py-clob-client>=0.15",
    "web3>=6.15",
    "eth-account>=0.11",

    # --- Configuration ---
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",

    # --- Logging ---
    "loguru>=0.7",

    # --- Scheduling ---
    "apscheduler>=3.10",

    # --- Visualization (backtesting reports) ---
    "plotly>=5.18",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]
ml = [
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "optuna>=3.5",
]

[project.scripts]
pm-bot = "src.main:main"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
